@@ -1,3 +1,14 @@
+2008-08-05  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-backend.lisp (make-recursive-lock)
+	(call-with-recursive-lock-held): Deleted.  Make the default locks
+	"recursive" instead.
+
+	* swank-gray.lisp (stream-write-string): New method.
+
+	* swank-backend.lisp (*gray-stream-symbols*): Include
+	write-string.
+
 2008-08-04  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-gray.lisp (slime-output-stream): Undo last change.
